--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,8 @@
 spring.application.name=TestingApp
 
 #DB configuration
-spring.datasource.url=jdbc:postgresql://${DB_HOST_URL}:5432/SpringPractice
-spring.datasource.username=${DB_Name}
+spring.datasource.url=jdbc:postgresql://${DB_HOST_URL}:5432/${DB_Name}
+spring.datasource.username=${DB_Username}
 spring.datasource.password=${DB_Password}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
